# django_depenendency_injection_tutorial

./: .gitignore  pyproject.toml
logs/: admin.py  apps.py  containers.py  models.py  services.py  views.py
logs/migrations/: 0001_initial.py  0002_remove_eventlog_event_type_eventlog_action.py
project/: settings.py  urls.py
