[tool.poetry]
name = "django-injection"
version = "0.1.0"
description = ""
authors = ["skavik <skavik46111@gmail.com>"]
readme = "README.md"
packages = [{include = "django_injection"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
